<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MRTDReaderFragment">


    <LinearLayout
        android:id="@+id/pnl_waiting_for_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mrtd_reader_title"
            android:layout_marginBottom="32dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pnl_no_nfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mrtd_no_nfc_reader"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_nfc_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take me there"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            style="?android:attr/borderlessButtonStyle"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pnl_read_document"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/mrtd_reading_document"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>


    </LinearLayout>


</RelativeLayout>
